The wrap-guide was hidden in this theme, fixed

--- a/index.less
+++ b/index.less
@@ -1,3 +1,7 @@
+.editor, .wrap-guide {
+  background-color: rgba(197, 200, 198, .2);
+}
+
 .editor, .editor .gutter {
   background-color: #141414;
   color: #F8F8F8;
